RESOLVED FIXED 85203
[Qt] DumpRenderTree does not use 'monospace' font when directed
https://bugs.webkit.org/show_bug.cgi?id=85203
Summary [Qt] DumpRenderTree does not use 'monospace' font when directed
Dave Tharp
Reported 2012-04-30 09:27:22 PDT
Created attachment 139462 [details] Reference test Monospace font does not get used when running QT DRT. Note that the monospace font does get used in the QT test browser. I'm attaching several files: - a reference test that specifies monospace font - png actual from run on QT Linux bots - a png expected from the GTK bots (to show that monospace works there properly) - a screen capture of the reference test running in the QT test browser.
Attachments
Reference test (1.28 KB, text/html)
2012-04-30 09:27 PDT, Dave Tharp
no flags
actual png generated on QT Linux bot (11.99 KB, image/png)
2012-04-30 09:28 PDT, Dave Tharp
no flags
expected png from GTK bot (9.25 KB, image/png)
2012-04-30 09:30 PDT, Dave Tharp
no flags
Screen capture of ref test running in QT test browser (8.42 KB, image/png)
2012-04-30 09:31 PDT, Dave Tharp
no flags
Patch for our testfonts.git repository, not for WebKit (10.34 KB, patch)
2012-05-25 08:08 PDT, Caio Marcelo de Oliveira Filho
no flags
And the complimentary patch for QtWebKit (1.57 KB, patch)
2012-05-29 08:35 PDT, Caio Marcelo de Oliveira Filho
no flags
List of tests that will need rebaseline (260.66 KB, text/plain)
2012-05-29 08:36 PDT, Caio Marcelo de Oliveira Filho
no flags
Patch for our testfonts.git repository, not for WebKit (1.71 MB, patch)
2012-07-02 13:52 PDT, Marcelo Lira
no flags
And the complimentary patch for QtWebKit (1.52 KB, patch)
2012-07-02 13:56 PDT, Marcelo Lira
no flags
Patch for our testfonts.git repository, not for WebKit (1.71 MB, patch)
2012-07-03 13:55 PDT, Marcelo Lira
no flags
And the complimentary patch for QtWebKit (239.99 KB, patch)
2012-07-03 14:08 PDT, Marcelo Lira
no flags
And the complimentary patch for QtWebKit (241.67 KB, patch)
2012-07-03 14:25 PDT, Marcelo Lira
no flags
failing tests on Qt 4.8 after these change (231.34 KB, text/plain)
2012-07-05 05:40 PDT, Csaba Osztrogonác
no flags
more failing tests on Qt 5.0 WK2 after these changes (7.09 KB, text/plain)
2012-07-05 05:52 PDT, Csaba Osztrogonác
no flags
And the complimentary patch for QtWebKit (241.53 KB, patch)
2012-07-05 08:52 PDT, Marcelo Lira
no flags
And the complimentary patch for QtWebKit (486.48 KB, patch)
2012-07-05 11:10 PDT, Marcelo Lira
no flags
Batch of reviewed expected results - animations and compositing (991.20 KB, patch)
2012-07-07 13:48 PDT, Luciano Wolf
no flags
Batch of reviewed expected txt results - animations and compositing (130.59 KB, patch)
2012-07-09 06:51 PDT, Luciano Wolf
no flags
Patch (595.49 KB, patch)
2012-07-12 10:15 PDT, Alex Bravo
no flags
Dave Tharp
Comment 1 2012-04-30 09:28:29 PDT
Created attachment 139463 [details] actual png generated on QT Linux bot
Dave Tharp
Comment 2 2012-04-30 09:30:07 PDT
Created attachment 139464 [details] expected png from GTK bot To demonstrate what monospace should look like.
Dave Tharp
Comment 3 2012-04-30 09:31:10 PDT
Created attachment 139465 [details] Screen capture of ref test running in QT test browser
Caio Marcelo de Oliveira Filho
Comment 4 2012-05-25 07:42:48 PDT
I'm working on this.
Caio Marcelo de Oliveira Filho
Comment 5 2012-05-25 08:08:19 PDT
Created attachment 144071 [details] Patch for our testfonts.git repository, not for WebKit
Caio Marcelo de Oliveira Filho
Comment 6 2012-05-29 08:35:47 PDT
Created attachment 144566 [details] And the complimentary patch for QtWebKit This patch removes the special case for Qt5 WK1. We used to load another configuration file, but that won't be needed anymore.
Caio Marcelo de Oliveira Filho
Comment 7 2012-05-29 08:36:58 PDT
Created attachment 144567 [details] List of tests that will need rebaseline List of the 5347 tests needing rebaseline :P
Balazs Kelemen
Comment 8 2012-05-30 00:47:42 PDT
Nice improvement, now the conf file is much more readable (and I assume more reliable as well).
Marcelo Lira
Comment 9 2012-07-02 13:52:28 PDT
Created attachment 150469 [details] Patch for our testfonts.git repository, not for WebKit
Marcelo Lira
Comment 10 2012-07-02 13:56:40 PDT
Created attachment 150472 [details] And the complimentary patch for QtWebKit
Caio Marcelo de Oliveira Filho
Comment 11 2012-07-02 14:39:30 PDT
Comment on attachment 150472 [details] And the complimentary patch for QtWebKit Missing ChangeLog.
Caio Marcelo de Oliveira Filho
Comment 12 2012-07-02 14:45:20 PDT
(In reply to comment #11) > (From update of attachment 150472 [details]) > Missing ChangeLog. This patch should land with the additions to the Skipped too and mention the SHA-1 of the testfonts.git it depends. Maybe even create another bug with a more descriptive summary to land the WebKit change.
Csaba Osztrogonác
Comment 13 2012-07-03 05:00:34 PDT
Discussion about this bug on QtWebKit ML: http://lists.webkit.org/pipermail/webkit-qt/2012-May/002846.html The plan in nutshell: - skip affected tests (~5400 tests) (INdT guys) - land patches in WebKit trunk and in testsfonts.git (INdT guys) - unskip and rebase tests in ~500 sized batches (Szeged guys) After rebaselining, we will have up-to-date png results for almost all tests. It's good time to try to start run pixel tests on the bots. (It will be experiment first, because I'm not sure if png results will be same (pixel by pixel) on 32/64 bit, on release/debug, on wk1/wk2.) I only worry about the Qt 4.8 results a little bit. It would be great if we can keep same results for Qt 4.8, Qt 5.0-WK1 and Qt 5.0-WK2 as the actualities. At least until branching WebKit for productization and drop supporting Qt 4.8 in trunk. I'm going to check if the new results are same for these 3 platform today. How does it sound?
Luciano Wolf
Comment 14 2012-07-03 05:48:46 PDT
Ossy, it sounds like a good plan. Talking to Alexis, there are 2 points that worth taking note: - we need a proper wikipage describing "how to do" the unskip/rebase process so we can get more people involved; - we have to keep all relevant comments from this mailing list thread and integrate into commit. It's a huge patch so we should keep as much information as possible without relying on links :)
Csaba Osztrogonác
Comment 15 2012-07-03 08:59:10 PDT
I made a quick experiment with the latest two patches (https://bugs.webkit.org/attachment.cgi?id=150469 and https://bugs.webkit.org/attachment.cgi?id=150472). I applied them, run tests on qt-5.0-wk1 platform, 5448 tests failed. And then I generated new results for these tests to platform/qt and run tests on qt-5.0-wk2 and qt-4.8 platform. There are only ~400 failing tests on both of them. But maybe some of them are false positive, because there can be not updated results in qt-4.8 and qt-5.0-wk2 platform. So it seems we will be able handle differences.
Marcelo Lira
Comment 16 2012-07-03 13:55:52 PDT
Created attachment 150665 [details] Patch for our testfonts.git repository, not for WebKit
Marcelo Lira
Comment 17 2012-07-03 14:08:24 PDT
Created attachment 150668 [details] And the complimentary patch for QtWebKit
Marcelo Lira
Comment 18 2012-07-03 14:25:58 PDT
Created attachment 150669 [details] And the complimentary patch for QtWebKit Now with ChangeLogs. :-s
Rafael Brandao
Comment 19 2012-07-04 12:50:32 PDT
Comment on attachment 150669 [details] And the complimentary patch for QtWebKit View in context: https://bugs.webkit.org/attachment.cgi?id=150669&action=review > LayoutTests/ChangeLog:3 > + The test fonts used for Qt tests moved to the Liberation font family. Maybe "were moved" instead of "moved"? Or "changed", like the comment you've added on Skipped list. > LayoutTests/ChangeLog:6 > + unskiped in batches, ASAP. "unskipped". > LayoutTests/ChangeLog:10 > + https://bugs.webkit.org/show_bug.cgi?id=85203 ChangeLog format is wrong. You should have the bug title followed by the bug url and then the description of your patch.
Kenneth Rohde Christiansen
Comment 20 2012-07-04 19:34:34 PDT
Comment on attachment 150669 [details] And the complimentary patch for QtWebKit r- due to comments
Csaba Osztrogonác
Comment 21 2012-07-05 05:40:00 PDT
Created attachment 150927 [details] failing tests on Qt 4.8 after these change Here is the list of failing tests on Qt 4.8 with these patches. We should add them to platform/qt-4.8/Skipped. My idea is that it makes unskipping work easily distributable. For example we grab 500-500 tests per person, check them manually, update/add txt/png baselines to platform/qt. I think the default platform/qt baseline should be Qt-5.0 WK1 results on Ubuntu 11.10 64bit inside XVFB. And then other persons can check the few hundred exceptions for platform/qt-4.8 and platform/qt-5.0-wk2. other pros/cons? maybe objections? :)
Csaba Osztrogonác
Comment 22 2012-07-05 05:52:58 PDT
Created attachment 150928 [details] more failing tests on Qt 5.0 WK2 after these changes Here is the failing tests on Qt 5.0 WK2 with the proposed patches and skipped tests. Could you integrate this list and the Qt 4.8 list to the patch, please?
Bruno Abinader (history only)
Comment 23 2012-07-05 06:28:19 PDT
I can help with Qt5 / Ubuntu 11.10 32bit inside XVFB :) (In reply to comment #21) > Created an attachment (id=150927) [details] > failing tests on Qt 4.8 after these change > > Here is the list of failing tests on Qt 4.8 with these > patches. We should add them to platform/qt-4.8/Skipped. > > My idea is that it makes unskipping work easily distributable. For example we grab > 500-500 tests per person, check them manually, update/add txt/png baselines to platform/qt. > I think the default platform/qt baseline should be Qt-5.0 WK1 results on Ubuntu 11.10 64bit inside XVFB. > And then other persons can check the few hundred exceptions for platform/qt-4.8 and platform/qt-5.0-wk2. > > other pros/cons? maybe objections? :)
Marcelo Lira
Comment 24 2012-07-05 08:52:43 PDT
Created attachment 150948 [details] And the complimentary patch for QtWebKit
Marcelo Lira
Comment 25 2012-07-05 11:10:55 PDT
Created attachment 150963 [details] And the complimentary patch for QtWebKit
Csaba Osztrogonác
Comment 26 2012-07-06 05:52:29 PDT
Comment on attachment 150963 [details] And the complimentary patch for QtWebKit Can we wait Qt5 update, please? :)
Csaba Osztrogonác
Comment 27 2012-07-06 07:38:33 PDT
Comment on attachment 150963 [details] And the complimentary patch for QtWebKit Landed in https://trac.webkit.org/changeset/121971
Csaba Osztrogonác
Comment 28 2012-07-06 07:39:57 PDT
Comment on attachment 150665 [details] Patch for our testfonts.git repository, not for WebKit Landed in 558f3e7afab058def053a7149160c027a0e67aeb (git://gitorious.org/qtwebkit/testfonts.git)
Luciano Wolf
Comment 29 2012-07-07 13:48:21 PDT
Created attachment 151146 [details] Batch of reviewed expected results - animations and compositing I'm not sure about some files. They are listed inside Changelog file.
Luciano Wolf
Comment 30 2012-07-09 06:51:33 PDT
Created attachment 151246 [details] Batch of reviewed expected txt results - animations and compositing I'm not sure about some files. They are listed inside Changelog file. This patch includes only expected txt results, as proposed in mailing list.
Noam Rosenthal
Comment 31 2012-07-09 06:57:02 PDT
Comment on attachment 151246 [details] Batch of reviewed expected txt results - animations and compositing LGTM
Csaba Osztrogonác
Comment 32 2012-07-09 07:01:09 PDT
Could you wait a little bit with landing, please? I'm writing a detailed e-mail now.
Luciano Wolf
Comment 33 2012-07-09 11:56:13 PDT
Working on css1 directory. The compositing directory has some chance of being updated later to make use of new WRT tests thing (new PNGs - discussed at #IRC and in a conversation with Caio). So I'm moving to css1 (next in line).
Alex Bravo
Comment 34 2012-07-11 18:00:34 PDT
I'll take html sub-directory.
Kristóf Kosztyó
Comment 35 2012-07-12 05:14:50 PDT
I'll take the css3 directory
Szilard Ledan
Comment 36 2012-07-12 05:16:07 PDT
I'll take css2.1/20110323 sub-directory (244 tests).
János Badics
Comment 37 2012-07-12 05:18:58 PDT
I'll take the fast/block dir
Ádám Kallai
Comment 38 2012-07-12 05:20:02 PDT
I'm working on editing/deleting test directory (121 tests)
Balazs Ankes
Comment 39 2012-07-12 05:20:31 PDT
I'll take editing/selection directory.
Kristóf Kosztyó
Comment 40 2012-07-12 06:39:49 PDT
I'm going to take svg/custom tests
Noam Rosenthal
Comment 41 2012-07-12 06:41:57 PDT
(In reply to comment #33) > Working on css1 directory. > > The compositing directory has some chance of being updated later to make use of new WRT tests thing (new PNGs - discussed at #IRC and in a conversation with Caio). So I'm moving to css1 (next in line). I think we can safely rebase the text results for compositing and animations, and skip the pixel results until we're ready with https://bugs.webkit.org/show_bug.cgi?id=90394
Ádám Kallai
Comment 42 2012-07-12 07:57:25 PDT
I'm going to upadte all of the editing tests.
Balazs Ankes
Comment 43 2012-07-12 08:00:44 PDT
I did the svg/W3C-SVG-1.*. Now Janos and I are going to take the tables directory.
Alex Bravo
Comment 44 2012-07-12 10:15:47 PDT
Alex Bravo
Comment 45 2012-07-12 10:33:48 PDT
Comment on attachment 151986 [details] Patch I will create a different bug
Balazs Kelemen
Comment 46 2012-07-13 04:36:41 PDT
(In reply to comment #41) > (In reply to comment #33) > > Working on css1 directory. > > > > The compositing directory has some chance of being updated later to make use of new WRT tests thing (new PNGs - discussed at #IRC and in a conversation with Caio). So I'm moving to css1 (next in line). > > I think we can safely rebase the text results for compositing and animations, and skip the pixel results until we're ready with https://bugs.webkit.org/show_bug.cgi?id=90394 I go for compositing. I plan to first rebase text results, than push pixel results that are actually correct so later we can test the snapshot pixel results with those.
Luciano Wolf
Comment 47 2012-07-13 13:17:15 PDT
Working on scrollbars, transforms, transitions directories
Balazs Ankes
Comment 48 2012-07-16 08:10:51 PDT
I'll take until fast/dom (except fast/block).
Bruno Abinader (history only)
Comment 49 2012-07-17 09:38:41 PDT
I'm taking fast/forms on bug 91504.
Szilard Ledan
Comment 50 2012-07-18 04:54:54 PDT
I'm going to take fast/css tests
Bruno Abinader (history only)
Comment 51 2012-07-18 06:18:49 PDT
Now taking fast/table directory on bug 91621.
Balazs Ankes
Comment 52 2012-07-18 07:09:06 PDT
I'm taking - fast/dynamic - fast/encoding - fast/events - fast/fast-mobile-scrolling - fast/flexbox - fast/frames - fast/gradients - fast/history - fast/html - fast/images - fast/inline-block - fast/inline - fast/innerHTML - fast/inspector-support - fast/invalid - fast/layers - fast/line-grid - fast/lists - fast/media - fast/multicol
Bruno Abinader (history only)
Comment 53 2012-07-18 10:42:16 PDT
Now taking fast/selectors directory on bug 91640.
Caio Marcelo de Oliveira Filho
Comment 54 2012-07-19 10:55:40 PDT
Taking svg/text, bug 91762.
Balazs Ankes
Comment 55 2012-07-20 06:41:10 PDT
I'm taking - fast/overflow - fast/parser - fast/reflections - fast/repaint - fast/replaced - fast/ruby - fast/runin - fast/spatial-navigation - fast/text - fast/tokenizer - fast/transforms - fast/writing-mode - fast/xsl (all of the remaining fast/* tests)
Szilard Ledan
Comment 56 2012-07-20 06:47:38 PDT
I'm taking - svg/as-background-image - svg/as-border-image - svg/as-image - svg/as-object - svg/batik - svg/carto.net - svg/clip-path - svg/css - svg/custom (Kristof gave the results) - svg/dom - svg/filters - svg/foreignObject - svg/hixie ( bug 91856 )
Luciano Wolf
Comment 57 2012-07-20 11:27:16 PDT
taking ietestcenter (bug 91886)
Caio Marcelo de Oliveira Filho
Comment 58 2012-07-23 05:23:37 PDT
Taking editing/inserting, bug 91985.
Luciano Wolf
Comment 59 2012-07-23 07:32:08 PDT
taking animations - updating only text results, as previously discussed in this thread (bug 91997)
Balazs Ankes
Comment 60 2012-07-23 07:36:36 PDT
taking css2.1/t* (bug 91999)
Rafael Brandao
Comment 61 2012-07-23 09:16:34 PDT
(In reply to comment #60) > taking css2.1/t* (bug 91999) I'm taking editing/pasteboard on bug 91621.
Rafael Brandao
Comment 62 2012-07-23 09:17:11 PDT
(In reply to comment #61) > (In reply to comment #60) > > taking css2.1/t* (bug 91999) > > I'm taking editing/pasteboard on bug 91621. Sorry, I mean I`m taking editing/pasteboard on bug 92007. :P
Rafael Brandao
Comment 63 2012-07-23 09:23:31 PDT
(In reply to comment #62) > (In reply to comment #61) > > (In reply to comment #60) > > > taking css2.1/t* (bug 91999) > > > > I'm taking editing/pasteboard on bug 91621. > > Sorry, I mean I`m taking editing/pasteboard on bug 92007. :P It conflicted with kadam's work. Then I'll work on svg/zoom on bug 92007 if no one objects.
Caio Marcelo de Oliveira Filho
Comment 64 2012-07-23 11:33:23 PDT
Taking tables/mozilla_expected_failures, bug 92013.
Luciano Wolf
Comment 65 2012-07-23 12:19:56 PDT
taking platform, plugins and printing directories (bug 92016)
Rafael Brandao
Comment 66 2012-07-23 13:33:33 PDT
Taking the remaining svg: svg/{in-html,overflow,repaint,wicd} on bug 92023.
Caio Marcelo de Oliveira Filho
Comment 67 2012-07-23 14:18:55 PDT
Taking remaining dom/, bug 92028.
Caio Marcelo de Oliveira Filho
Comment 68 2012-07-23 15:37:54 PDT
Taking css3/selectors, bug 92038.
Alexis Menard (darktears)
Comment 69 2012-07-24 11:30:21 PDT
(In reply to comment #68) > Taking css3/selectors, bug 92038. Taking fast/borders
Luciano Wolf
Comment 70 2012-07-24 11:53:00 PDT
taking fast/block/basic directory
Luciano Wolf
Comment 71 2012-07-24 12:23:56 PDT
taking fast/block/float directory
Luciano Wolf
Comment 72 2012-07-24 14:20:50 PDT
(In reply to comment #69) > (In reply to comment #68) > > Taking css3/selectors, bug 92038. > > Taking fast/borders I'll continue the work on this one (fast/borders)
Caio Marcelo de Oliveira Filho
Comment 73 2012-07-24 16:19:15 PDT
Taking fast/block/positioning, bug 92174.
Bruno Abinader (history only)
Comment 74 2012-07-24 17:45:53 PDT
Taking editing/selection, bug 92186.
Luciano Wolf
Comment 75 2012-07-25 11:29:22 PDT
taking fast/block/margin-collapse (bug #92274)
Luciano Wolf
Comment 76 2012-07-25 13:31:50 PDT
taking editing/undo, fast/block/lineboxcontain and fast/js directories
Luciano Wolf
Comment 77 2012-07-25 14:31:55 PDT
(In reply to comment #76) > taking editing/undo, fast/block/lineboxcontain and fast/js directories also taking css3/filters and tables/layering (bug 92292)
Noam Rosenthal
Comment 78 2012-07-25 14:36:53 PDT
(In reply to comment #77) > (In reply to comment #76) > > taking editing/undo, fast/block/lineboxcontain and fast/js directories > > also taking css3/filters and tables/layering (bug 92292) For now, don't rebaseline pixel results for anything under css3/filteres/*-hw.html. It's going to have different pixel results when switching to window snapshots.
Luciano Wolf
Comment 79 2012-07-26 07:06:38 PDT
(In reply to comment #78) > (In reply to comment #77) > > (In reply to comment #76) > > > taking editing/undo, fast/block/lineboxcontain and fast/js directories > > > > also taking css3/filters and tables/layering (bug 92292) > For now, don't rebaseline pixel results for anything under css3/filteres/*-hw.html. It's going to have different pixel results when switching to window snapshots. Ok! Only updating a few text results (3) for css3/filters.
WebKit Review Bot
Comment 80 2012-07-27 05:01:07 PDT
Comment on attachment 151246 [details] Batch of reviewed expected txt results - animations and compositing Cleared Noam Rosenthal's review+ from obsolete attachment 151246 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Caio Marcelo de Oliveira Filho
Comment 81 2012-07-27 16:00:35 PDT
DumpRenderTree and WebKitTestRunner now use monospace fonts when asked to. So I'll close this as fixed. There's still a few tests that need to be triaged and bug 91610 was created to track them. They are identified in Qt's Skipped files.
Note You need to log in before you can comment on or make changes to this bug.