[Qt] DumpRenderTree does not use 'monospace' font when directed https://bugs.webkit.org/show_bug.cgi?id=85203

The test fonts used for Qt tests were moved to the Liberation font family.

Due to this change we are skipping tons of tests. They will be gradually
unskipped in batches, ASAP.

Also, the now unneeded special font configuration for Qt5 WK1 was removed.

Patch by Luciano Wolf <luciano.wolf@openbossa.org> on 2012-07-06
Reviewed by Tor Arne Vestbø.

Tools:

* DumpRenderTree/qt/QtInitializeTestFonts.cpp:
(WebKit::initializeTestFonts):

LayoutTests:

* platform/qt-4.8/Skipped:
* platform/qt-5.0-wk1/Skipped:
* platform/qt-5.0-wk2/Skipped:
* platform/qt-5.0/Skipped:

Canonical link: https://commits.webkit.org/108529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121971 268f45cc-cd09-0410-ab3c-d52691b4dbfc